# mini_harness

./: PHASE3_E2E_TEST_REPORT.md  README.md  main.py  pyproject.toml  requirements.txt
demo_outputs/: baseline_result.json  e2e_report.md  e2e_result.json  harness_result.json  progress.md  春夜有感（仿李白诗意）.md  春夜诗.txt
harness/: __init__.py  budget.py  config.py  console.py  context.py  core.py  evaluator.py  hooks.py  permission.py  planner.py  progress.py  subagent.py  tool_file_ops.py  verifier.py
scripts/: run_e2e_demo.py  run_full_harness.py  run_minimalistz_demo.py
test_data/refactor_project/: main.py
test_results/: e2e_test_20260421_195017.json
tests/: test_budget.py  test_context.py  test_core.py  test_core_integration.py  test_evaluator.py  test_hooks.py  test_integration.py  test_permission.py  test_planner.py  test_progress.py  test_subagent.py  test_verifier.py  test_verifier_pytest.py
