[project]
name = "mini-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "notebook==7.2.2",
    "openai==2.26.0",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
]
